--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="/favicon.png" />
+        <link rel="icon" href="./favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,28 +11,28 @@
             rel="stylesheet"
         />
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BAjkMXDU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.yVTfVzsv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.ZUG1ED2p.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CeIcqwU0.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B84V4ndb.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.XEYFAfoL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.B2QKOKZv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.CZKQIM6c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BAjkMXDU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.yVTfVzsv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.ZUG1ED2p.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CeIcqwU0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B84V4ndb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.XEYFAfoL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.B2QKOKZv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/props.CZKQIM6c.js">
     </head>
     <body data-sveltekit-preload-data="hover">
         <div style="display: contents">
 			<script>
 				{
 					__sveltekit_150r671 = {
-						base: ""
+						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BAjkMXDU.js"),
-						import("/_app/immutable/entry/app.B84V4ndb.js")
+						import("./_app/immutable/entry/start.BAjkMXDU.js"),
+						import("./_app/immutable/entry/app.B84V4ndb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
