--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             rel="stylesheet"
         />
         
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BAjkMXDU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.yVTfVzsv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CAepB5aQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CsTAGuMl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.ZUG1ED2p.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CeIcqwU0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B84V4ndb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C3J_V1nt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.XEYFAfoL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.B2QKOKZv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.CZKQIM6c.js">
@@ -24,15 +24,15 @@
         <div style="display: contents">
 			<script>
 				{
-					__sveltekit_150r671 = {
+					__sveltekit_13scfhs = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BAjkMXDU.js"),
-						import("./_app/immutable/entry/app.B84V4ndb.js")
+						import("./_app/immutable/entry/start.CAepB5aQ.js"),
+						import("./_app/immutable/entry/app.C3J_V1nt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
