--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             rel="stylesheet"
         />
         
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CLnuwMoR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.c3ma2aSK.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DAVoqcQ7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DZqZYV-Y.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.ZUG1ED2p.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CeIcqwU0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.vYbuQHZJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CGSa7xKd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.XEYFAfoL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.B2QKOKZv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.CZKQIM6c.js">
@@ -24,7 +24,7 @@
         <div style="display: contents">
 			<script>
 				{
-					__sveltekit_1thnhtp = {
+					__sveltekit_jc1pox = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/track-gen"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CLnuwMoR.js"),
-						import("./_app/immutable/entry/app.vYbuQHZJ.js")
+						import("./_app/immutable/entry/start.DAVoqcQ7.js"),
+						import("./_app/immutable/entry/app.CGSa7xKd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
