--- a/404.html
+++ b/404.html
@@ -11,11 +11,11 @@
             rel="stylesheet"
         />
         
-		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/start.D0eJPuBH.js">
-		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/entry.CvbmSNow.js">
+		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/start.CGiX8vRQ.js">
+		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/entry.DK9Qq_7f.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/runtime.ZUG1ED2p.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/index.CeIcqwU0.js">
-		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/app.BSYw1Rbh.js">
+		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/app.BZblRIIn.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/render.XEYFAfoL.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/disclose-version.B2QKOKZv.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/props.CZKQIM6c.js">
@@ -24,7 +24,7 @@
         <div style="display: contents">
 			<script>
 				{
-					__sveltekit_1fxnpme = {
+					__sveltekit_17u44fk = {
 						base: "/track-gen",
 						assets: "/track-gen"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/track-gen/_app/immutable/entry/start.D0eJPuBH.js"),
-						import("/track-gen/_app/immutable/entry/app.BSYw1Rbh.js")
+						import("/track-gen/_app/immutable/entry/start.CGiX8vRQ.js"),
+						import("/track-gen/_app/immutable/entry/app.BZblRIIn.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
