--- a/404.html
+++ b/404.html
@@ -11,11 +11,11 @@
             rel="stylesheet"
         />
         
-		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/start.CMMIsPUs.js">
-		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/entry.B7JU29sm.js">
+		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/start.TOhu4jXa.js">
+		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/entry.CEtzYWEe.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/runtime.ZUG1ED2p.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/index.CeIcqwU0.js">
-		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/app.eFdFJlPP.js">
+		<link rel="modulepreload" href="/track-gen/_app/immutable/entry/app.DqAz6S_4.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/render.XEYFAfoL.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/disclose-version.B2QKOKZv.js">
 		<link rel="modulepreload" href="/track-gen/_app/immutable/chunks/props.CZKQIM6c.js">
@@ -24,7 +24,7 @@
         <div style="display: contents">
 			<script>
 				{
-					__sveltekit_shgzlf = {
+					__sveltekit_1s0wmx = {
 						base: "/track-gen",
 						assets: "/track-gen"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/track-gen/_app/immutable/entry/start.CMMIsPUs.js"),
-						import("/track-gen/_app/immutable/entry/app.eFdFJlPP.js")
+						import("/track-gen/_app/immutable/entry/start.TOhu4jXa.js"),
+						import("/track-gen/_app/immutable/entry/app.DqAz6S_4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
